feat: add small boats and routes
